refacto sugges1